# DataAnalysis_Tkinter

./: .gitignore  LoadData.py  Makefile  Model.py  README.md  View.py  f21sc_cw2.spec  f21sccw2.spec  pyproject.toml  requirements.txt
scripts/: bundle.sh
src/: Controller.py  GraphViz.py  Model.py  ModelV2.py  View.py  __init__.py  f21sc_cw2.py  f21sccw2.py  test_model.py
