[project]
name = "f21sc-cw2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "pycountry-convert>=0.7.2",
]

[tool.uv]
dev-dependencies = [
    "pandas-stubs>=2.2.3.241009",
    "pyinstaller>=6.11.1",
]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
